@@ -1385,6 +1385,9 @@ a img.calendar {
 .icon-48-weblinks-category-add {
 	background-image: url(../images/header/icon-48-category-add.png);
 }
+.icon-48-tags {
+	background-image: url(../images/header/icon-48-tags.png);
+}
 div.message {
 	border: 1px solid #000000;
 	color: #2c2c2c;
