@@ -1227,6 +1227,9 @@ a img.calendar {
 .icon-48-weblinks-category-add {
 	background-image: url(../images/header/icon-48-category-add.png);
 }
+.icon-48-tags {
+	background-image: url(../images/header/icon-48-tags.png);
+}
 
 /**
  * General styles
