@@ -3011,6 +3011,11 @@ ul.helpmenu li {
 	background-image: url(../images/menu/icon-16-links-cat.png);
 }
 
+.menu-tags {
+	background-image: url(../images/menu/icon-16-tags.png);
+}
+
+
 /**
  * Extra positioning rules for limited noscript keyboard accessibility
  * need the backgrounds here to keep the background as the nav background
